--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
    background-color: #E6E6FA;
    color: #191970;
 }
+#learning {
+   background-color: #FFFFFF;
+    color: #191970;
+}
+p {
+   background-color: #AEAED4;
+   color: #191970;
+}
